GNOME Bugzilla – Bug 655723
egl-gdl: Silence a gcc warning
Last modified: 2011-08-01 15:42:01 UTC
gcc warns us that we should put some {} to make to which 'if's the 'else' belongs to very clear.
Created attachment 192985 [details] [review] egl-gdl: Silence a gcc warning
Pushed as 89426a802f4ee68e137268b0484690b9e2a895b8. Thanks.